--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/sashaegorov/beginners-guide-to-webpack/issues"
   },
-  "homepage": "https://github.com/sashaegorov/beginners-guide-to-webpack#readme"
+  "homepage": "https://github.com/sashaegorov/beginners-guide-to-webpack#readme",
+  "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "jshint": "^2.9.2",
+    "jshint-loader": "^0.8.3",
+    "node-libs-browser": "^1.0.0",
+    "webpack": "^1.13.0"
+  }
 }
