--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "scripts": {
+    "start": "webpack-dev-server --inline"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sashaegorov/beginners-guide-to-webpack.git"
