--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Beginners guide to Webpack",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --inline"
+    "start": "webpack-dev-server --inline",
+    "pack": "webpack --config webpack-production.config.js -p"
   },
   "repository": {
     "type": "git",
@@ -31,10 +32,15 @@
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-react": "^5.1.1",
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
     "strip-loader": "^0.1.2",
     "webpack": "^1.13.0"
+  },
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
