--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server --inline",
-    "pack": "webpack --config webpack-production.config.js -p"
+    "pack": "webpack --config webpack-production.config.js -p --progress"
   },
   "repository": {
     "type": "git",
