--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jshint": "^2.9.2",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "strip-loader": "^0.1.2",
     "webpack": "^1.13.0"
   },
