--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Beginners guide to Webpack",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --inline",
+    "start": "webpack-dev-server --inline --hot --port 9999 --compress --open",
     "pack": "webpack --config webpack-production.config.js -p --progress"
   },
   "repository": {
