--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "eslint": "^2.10.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
